@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Fixed a bug where fully-qualified URLs showed up as localhost in the request path in logging (issue 304).
+* Fixed a NPE when parsing no-value cookies in HTTP response (issue 306).
 
 Change log 2.3.0 (2014-01-23)
 -----------------------------
